tests/ui/parser/float-field-interpolated.stderr
error: unexpected token: `1.1`
  --> $DIR/float-field-interpolated.rs:8:13
   |
LL | / macro_rules! generate_field_accesses {
LL | |     ($a:tt, $b:literal, $c:expr) => {
LL | |         let s = S(0, (0, 0));
LL | |
LL | |         s.$a; // OK
LL | |         { s.$b; }
   | |             ^^
...  |
LL | |     };
LL | | }
   | |_- in this expansion of `generate_field_accesses!`
...
LL |       generate_field_accesses!(1.1, 1.1, 1.1);
   |       --------------------------------------- in this macro invocation

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `1.1`
  --> $DIR/float-field-interpolated.rs:8:13
   |
LL | / macro_rules! generate_field_accesses {
LL | |     ($a:tt, $b:literal, $c:expr) => {
LL | |         let s = S(0, (0, 0));
LL | |
LL | |         s.$a; // OK
LL | |         { s.$b; }
   | |             ^^ expected one of `.`, `;`, `?`, `}`, or an operator
...  |
LL | |     };
LL | | }
   | |_- in this expansion of `generate_field_accesses!`
...
LL |       generate_field_accesses!(1.1, 1.1, 1.1);
   |       --------------------------------------- in this macro invocation

error: unexpected token: `1.1`
  --> $DIR/float-field-interpolated.rs:10:13
   |
LL | / macro_rules! generate_field_accesses {
LL | |     ($a:tt, $b:literal, $c:expr) => {
LL | |         let s = S(0, (0, 0));
LL | |
...  |
LL | |         { s.$c; }
   | |             ^^
LL | |
LL | |     };
LL | | }
   | |_- in this expansion of `generate_field_accesses!`
...
LL |       generate_field_accesses!(1.1, 1.1, 1.1);
   |       --------------------------------------- in this macro invocation

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `1.1`
  --> $DIR/float-field-interpolated.rs:10:13
   |
LL | / macro_rules! generate_field_accesses {
LL | |     ($a:tt, $b:literal, $c:expr) => {
LL | |         let s = S(0, (0, 0));
LL | |
...  |
LL | |         { s.$c; }
   | |             ^^ expected one of `.`, `;`, `?`, `}`, or an operator
LL | |
LL | |     };
LL | | }
   | |_- in this expansion of `generate_field_accesses!`
...
LL |       generate_field_accesses!(1.1, 1.1, 1.1);
   |       --------------------------------------- in this macro invocation

error: aborting due to 4 previous errors

